--- a/clusters/dev/aks-store-demo-store-front-image-update.yaml
+++ b/clusters/dev/aks-store-demo-store-front-image-update.yaml
@@ -8,7 +8,7 @@ spec:
   git:
     checkout:
       ref:
-        branch: flux
+        branch: istio
     commit:
       author:
         email: fluxcdbot@users.noreply.github.com
